# splat-viewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
resources/models/: clock_1band.ply  test_1band.ply
resources/shaders/: grid.fs  grid.gs  grid.vs  pointcloud.fs  pointcloud.gs  pointcloud.vs  process_pixels.cs  quad.vs  splat_covariances.cs
src/: glad.c  main.cpp
src/graphics/: camera.h  shader.h
src/model_loading/: splat_model.h
